--- a/People.xcodeproj/xcshareddata/xcschemes/People-iOS.xcscheme
+++ b/People.xcodeproj/xcshareddata/xcschemes/People-iOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "21BD00EC1B4A30CD001180E2"
-               BuildableName = "People-iOS.framework"
+               BuildableName = "People.framework"
                BlueprintName = "People-iOS"
                ReferencedContainer = "container:People.xcodeproj">
             </BuildableReference>
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "21BD00F71B4A30CD001180E2"
-               BuildableName = "PeopleTests-iOS.xctest"
+               BuildableName = "PeopleTests.xctest"
                BlueprintName = "PeopleTests-iOS"
                ReferencedContainer = "container:People.xcodeproj">
             </BuildableReference>
@@ -47,7 +47,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "21BD00F71B4A30CD001180E2"
-               BuildableName = "PeopleTests-iOS.xctest"
+               BuildableName = "PeopleTests.xctest"
                BlueprintName = "PeopleTests-iOS"
                ReferencedContainer = "container:People.xcodeproj">
             </BuildableReference>
@@ -57,7 +57,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "21BD00EC1B4A30CD001180E2"
-            BuildableName = "People-iOS.framework"
+            BuildableName = "People.framework"
             BlueprintName = "People-iOS"
             ReferencedContainer = "container:People.xcodeproj">
          </BuildableReference>
@@ -76,7 +76,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "21BD00EC1B4A30CD001180E2"
-            BuildableName = "People-iOS.framework"
+            BuildableName = "People.framework"
             BlueprintName = "People-iOS"
             ReferencedContainer = "container:People.xcodeproj">
          </BuildableReference>
@@ -94,7 +94,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "21BD00EC1B4A30CD001180E2"
-            BuildableName = "People-iOS.framework"
+            BuildableName = "People.framework"
             BlueprintName = "People-iOS"
             ReferencedContainer = "container:People.xcodeproj">
          </BuildableReference>
